# so3g

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.rst  conda_deps.txt  conda_dev_requirements.txt  docker-compose.yml  generate_version.sh  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version_h.py
.github/workflows/: deploy.yml  deploy_docker.yml  deploy_wheels.yml  official-docker-images.yml  pytest.yml  test.yml  test_conda.yml  test_docker.yml  test_wheels.yml  testconda.yml  wheels.yml
cmake/: FindCeres.cmake  FindEigen3.cmake  FindFFTW.cmake  FindGFlags.cmake  FindGlog.cmake  FindSpt3g.cmake
demos/: demo_proj1.py  demo_proj2.py  demo_proj_hp.py  demo_tiled.py  test_utils.py  write_hk.py
docker/: qpoint-setup.sh  so3g-setup.sh
docker/so3g-jupyter/: Dockerfile
docker/so3g-jupyter/jupyter_config/: jupyter_config.py
docker/so3g-jupyter/jupyter_config/nbconfig/: notebook.json
docs/: _so3g_rtd_version.txt  conf.py  cpp_objects.rst  extract_docstrings.py  hk.rst  index.rst  intro.rst  maintenance_notes.rst  proj.rst  requirements.txt  smurf_archive.rst
docs/images/: tiled_maps.xcf
include/: Butterworth.h  G3IndexedReader.h  G3Ndarray.h  G3Ndmap.h  G3SuperTimestream.h  G3ThreadedExpander.h  G3VectorFixed.h  G3WCS.h  Intervals.h  Projection.h  Ranges.h  Rebundler.h  SampleFlags.h  array_ops.h  bindings.h  container_pybindings.h  exceptions.h  fitting_ops.h  hkagg.h  numpy_assist.h  pybindings.h  quaternion.h  so3g_numpy.h  so_linterp.h  test.h
modules/: README.rst  spt3g_shared
python/: __init__.py  _libso3g_docstring_shells.py  config.py  coords.py  g3reader_shim.py  hkagg.py  load_pybindings.py  quicksim.py  reader.py  soframe.py  spt3g.py  spt3g_import.py  w.py
python/det/: reader.py
python/hk/: __init__.py  cli.py  getdata.py  reframer.py  resampler.py  scanner.py  session.py  translator.py  tree.py  util.py
python/proj/: __init__.py  coords.py  mapthreads.py  quat.py  ranges.py  util.py  wcs.py
python/smurf/: SmurfArchive.py  __init__.py  reader.py  smurf_archive.py
python/so3g/: g3reader_shim.py
python/so3g/hk/: __init__.py  cli.py  getdata.py  scanner.py  session.py  translator.py  tree.py  util.py
python/so3g/proj/: __init__.py  coords.py  mapthreads.py  quat.py  ranges.py  wcs.py  weather.py
python/so3g/smurf/: reader.py  smurf_archive.py
scripts/: so-hk-tool
so3g-jupyter/: Dockerfile  requirements.txt
so3g-jupyter/jupyter_config/: .jupyter_pw_hash  set_jupyter_pw.py
src/: Butterworth.cxx  CMakeLists.txt  G3IndexedReader.cxx  G3Ndarray.cxx  G3Ndmap.cxx  G3SuperTimestream.cxx  G3ThreadedExpander.cxx  G3VectorFixed.cxx  G3WCS.cxx  Intervals.cxx  Projection.cxx  Ranges.cxx  Rebundler.cxx  SampleFlags.cxx  array_ops.cxx  dload.c  exceptions.cxx  fitting_ops.cxx  healpix_bare.c  hkagg.cxx  main.cxx  python.cxx  so_linterp.cxx  test.cxx
test/: test_array_ops.py  test_blas.py  test_butterworth.py  test_fitting_ops.py  test_fixed.py  test_frame_types.py  test_g3ndarray.py  test_g3super.py  test_hk_getdata.py  test_hkagg.py  test_indexed.py  test_intervals.py  test_irreg.py  test_pointing.py  test_pointing2.py  test_pointing3.py  test_pointing4.py  test_proj_astro.py  test_proj_eng.py  test_proj_eng_hp.py  test_proj_quat.py  test_proj_zen.py  test_ranges.py  test_utils.py
wheels/: build_requirements.txt  build_sdist.sh  install_deps_linux.sh  install_deps_osx.sh  repair_wheel_linux.sh  repair_wheel_macos.sh  spt3g.patch  spt3g_circular_imports.patch  spt3g_disable_netcdf.patch  spt3g_sys_time.patch  temp_static_libs.patch  test_local_cibuildwheel.sh  test_local_macos.sh  test_requirements.txt
