[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
    "numpy",
    "scipy",
]
build-backend = "scikit_build_core.build"

[project]
name = "so3g"
readme = "README.rst"
description = "Tools for Simons Observatory work with spt3g_software"
urls = {source = "https://github.com/simonsobs/so3g"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "spt3g",
    "astropy",
    "matplotlib",
    "ephem",
    "pytz",
    "pyaml",
    "sqlalchemy",
    "tqdm",
    "qpoint",
]
dynamic=["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
so-hk-tool = "so3g.hk.cli:main"

[tool.scikit-build]
build.verbose = true
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.wheel.packages]
"so3g" = "python/so3g"
"so3g/hk" = "python/so3g/hk"
"so3g/proj" = "python/so3g/proj"
"so3g/smurf" = "python/so3g/smurf"

#[tool.scikit-build.metadata.version]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

