[build-system]
requires = [
    "cmake>=3.17",
    "setuptools",
    "wheel",
    "numpy",
    "scipy",
]
build-backend = "setuptools.build_meta"

[project]
name = "so3g"
readme = "README.rst"
description = "Tools for Simons Observatory work with spt3g_software"
urls = {source = "https://github.com/simonsobs/so3g"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "ephem",
    "pytz",
    "pyaml",
    "sqlalchemy",
    "tqdm",
    "qpoint",
]
dynamic=["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
